--- a/NLP/bag_of_n_grams/Fake_news_detection_bag_of_n_grams.ipynb
+++ b/NLP/bag_of_n_grams/Fake_news_detection_bag_of_n_grams.ipynb
@@ -6,7 +6,7 @@
     "id": "XFT4zbqFwRmr"
    },
    "source": [
-    "### **Bag of n_grams: Solutions**\n",
+    "### **Bag of n_grams:**\n",
     "\n",
     "- Fake news refers to misinformation or disinformation in the country which is spread through word of mouth and more recently through digital communication such as What's app messages, social media posts, etc.\n",
     "\n",
